# MatMat128Benchmark

./: .gitignore  CMakeLists.txt  README.md
src/: TimeLogger.h  aligned_allocator.h  common.h  kernels.h  main.cpp  main_mat_mat2.cpp  main_mat_vec.cpp  main_simple_read.cpp  main_vec_dot.cpp  mat_mat.cpp  mat_vec.cpp  simple_read.cpp  vec_dot.cpp
